--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,6 +15,10 @@
   clip-path: polygon(49% 0, 100% 0, 40% 100%, 0 100%, 0 0);
 }
 
+.map {
+  height: 100%;
+}
+
 .content-wrapper {
   display: flex;
   flex-direction: column;
@@ -35,12 +39,18 @@
 }
 
 .random-button {
-  height: 30px;
+  min-height: 30px;
   background-color: rgba(48, 48, 48, 0.788);
   border: 0;
   color: #fff;
   cursor: pointer;
   text-decoration: none;
-  max-width: 280px;
+  max-width: 340px;
   margin-top: 10px;
+}
+
+.maps-container {
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-start;
 }
